// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot matches main page title - h1 1`] = `
<div
  className="MuiBox-root css-i3pbo"
>
  <h1
    className="MuiTypography-root MuiTypography-h4 css-75qh34-MuiTypography-root"
  >
    Test h1
  </h1>
  <p
    className="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet...
  </p>
</div>
`;

exports[`Snapshot matches paragraph title - h3 1`] = `
<div
  className="MuiBox-root css-i3pbo"
>
  <h1
    className="MuiTypography-root MuiTypography-h4 css-75qh34-MuiTypography-root"
  >
    Test h3
  </h1>
  <p
    className="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet...
  </p>
</div>
`;
